feat: Implement calculator key pad
- Ubah style MaterialButton ke TextButton dan tambahkan id.
- Tambah data class CalcButton dengan label dan flag operator.
- Buat CalcAdapter untuk menampilkan tombol dalam grid.

--- a/app/src/main/res/layout/item_calculator_button.xml
+++ b/app/src/main/res/layout/item_calculator_button.xml
@@ -2,14 +2,17 @@
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/btn_numberKeyPad"
     style="@style/Widget.MaterialComponents.Button.TextButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:gravity="center"
     android:minHeight="80dp"
+    android:minWidth="80dp"
     android:text="@string/str_number_calc"
     android:textColor="?attr/colorPrimary"
     android:textSize="54sp"
+    android:textStyle="bold"
     app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent"
     tools:text="9" />
