feat: Implement basic UI for calculator pad and add XML code style
- Created `PadKeys` data class to define the calculator's keys with `label`, `span`, and `isOperator` properties.
- Created `CalcAdapter` to manage the display of calculator keys in a RecyclerView.
- Updated `CalculatorFragment` to display a grid of buttons using `CalcAdapter` and `PadKeys`.
- Added functionality to display pressed key on tv_mainNumber
- Added XML code style settings.
- Added `item_calculator_button.xml` to define the button layout.
- Refactor file `CalcButton.kt` to `PadKeys.kt`

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="blue900">#254F84</color>
     <color name="blue950">#153F75</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="calc_digit">#6200EE</color>
+    <color name="calc_operator">#FF5722</color>
 </resources>
